# maybe-not

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.license  action.py  action.yml  pyproject.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-analysis.yml  maybe-not.yml  push.yml
